Added user actions for admin
